<resources>
    <string name="app_name">拼图快快快</string>
    <string name="login">登录</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recover">恢复代码</string>
    <string name="register_login">注册并登录</string>
    <string name="level">请选择难度</string>
    <string name="play">开始</string>
    <string name="please_complete_the_picture">请完成拼图</string>
    <string name="you_have_took_0_steps">你走了0步</string>
    <string name="give_up">放弃</string>
    <string name="intact_image">完整的图像</string>
    <string name="play_again">再来一局!</string>
    <string name="stop_play">退出</string>
    <string name="recover_password">重置密码</string>
    <string name="return_back">返回</string>
    <string name="new_password">新密码</string>
    <string name="recover_tip">忘记密码？点此重置密码</string>
    <string name="show_history">点击查看历史成绩</string>
    <string name="remember_password">记住密码</string>

    <string-array name="difficulty">
        <item>简单</item>
        <item>中等</item>
        <item>困难</item>
    </string-array>
</resources>