<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="@drawable/blank"
        app:layout_constraintBottom_toTopOf="@+id/login_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/login"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/login_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/name_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:ems="10"
            android:lines="1"
            android:hint="@string/user_name"
            android:gravity="center"
            android:background="@drawable/login_edit_text"
            android:autofillHints="" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="25sp"
            android:ems="10"
            android:lines="1"
            android:hint="@string/password"
            android:gravity="center"
            android:inputType="textPassword"
            android:background="@drawable/login_edit_text"
            android:autofillHints="" />

        <CheckBox
            android:id="@+id/remember_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_password"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_input">

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:ems="8"
            android:text="@string/login"
            app:toggleCheckedStateOnClick="false"
            tools:ignore="ButtonStyle,UsingOnClickInXml" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ems="8"
            android:text="@string/register"
            tools:ignore="ButtonStyle,UsingOnClickInXml" />
    </LinearLayout>

    <Button
        android:id="@+id/recover_button"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/recover_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>